# adk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FORK.md  README.md  pyproject.toml
.agents/skills/adk-git/: SKILL.md
.agents/skills/adk-issue/: SKILL.md
.agents/skills/adk-pr-triage/: SKILL.md
.agents/skills/adk-pr-triage/scripts/: triage_pr.py
.agents/skills/adk-review/: SKILL.md
.agents/skills/adk-sample-creator/: SKILL.md
.github/workflows/: auto-sync.yml  check-file-contents.yml  copybara-pr-handler.yml  fork-ci.yml  pre-commit.yml  python-unit-tests.yml
contributing/samples/core/abort/: README.md  agent.py
contributing/samples/hitl/request_input_tool/: README.md  agent.py
contributing/samples/hitl/request_input_tool/tests/: create_support_ticket.json
contributing/samples/integrations/data_agent/: agent.py
contributing/samples/integrations/sandbox_computer_use/: agent.py  main.py
contributing/samples/models/interactions_api/: agent.py  main.py
contributing/samples/tools/pydantic_argument/tests/: test_create_company.json
docs/design/cli/api_server/: abort.md
docs/guides/cli/api_server/: abort.md
scripts/: update-fork.sh
src/google/adk/: runners.py
src/google/adk/agents/: __init__.py  agent_config.py  base_agent.py  base_agent_config.py  common_configs.py  config_agent_utils.py  context.py  llm_agent.py  llm_agent_config.py  loop_agent.py  loop_agent_config.py  parallel_agent.py  parallel_agent_config.py  sequential_agent.py  sequential_agent_config.py
src/google/adk/agents/config_schemas/: AgentConfig.json
src/google/adk/agents/llm/task/: _task_models.py
src/google/adk/auth/: oauth2_credential_util.py
src/google/adk/cli/: adk_web_server.py  api_server.py  fast_api.py
src/google/adk/cli/built_in_agents/: adk_agent_builder_assistant.py
src/google/adk/cli/utils/: evals.py
src/google/adk/evaluation/: evaluation_generator.py  final_response_match_v2.py  llm_as_judge_utils.py
src/google/adk/events/: event.py
src/google/adk/features/: _feature_registry.py
src/google/adk/flows/llm_flows/: base_llm_flow.py  contents.py  functions.py  identity.py
src/google/adk/integrations/firestore/: firestore_session_service.py
src/google/adk/integrations/vmaas/: sandbox_computer.py
src/google/adk/models/: anthropic_llm.py  base_llm.py  gemini_llm_connection.py  google_llm.py  interactions_utils.py  lite_llm.py  llm_response.py
src/google/adk/plugins/: plugin_manager.py
src/google/adk/sessions/: in_memory_session_service.py  state.py
src/google/adk/skills/: _utils.py
src/google/adk/telemetry/: _experimental_semconv.py  _instrumentation.py  _metrics.py  tracing.py
src/google/adk/tools/: __init__.py  _request_input_tool.py  agent_tool.py  base_tool.py  bash_tool.py  discovery_engine_search_tool.py  function_tool.py  google_tool.py  skill_toolset.py
src/google/adk/tools/environment/: _edit_file_tool.py  _environment_toolset.py  _execute_tool.py  _read_file_tool.py  _tools.py  _utils.py  _write_file_tool.py
src/google/adk/tools/mcp_tool/: mcp_tool.py  mcp_toolset.py  session_context.py
src/google/adk/tools/openapi_tool/openapi_spec_parser/: rest_api_tool.py
src/google/adk/utils/: agent_info.py
src/google/adk/workflow/: _graph.py
tests/integration/fixture/bigquery_agent/: README.md
tests/unittests/: test_runners.py  testing_utils.py
tests/unittests/agents/: test_agent_config.py  test_llm_agent_interruptions.py
tests/unittests/auth/: test_oauth2_credential_util.py
tests/unittests/cli/: test_fast_api.py
tests/unittests/cli/utils/: test_evals.py
tests/unittests/evaluation/: test_evaluation_generator.py  test_final_response_match_v2.py  test_llm_as_judge_utils.py
tests/unittests/flows/llm_flows/: test_base_llm_flow.py  test_functions_simple.py
tests/unittests/integrations/firestore/: test_firestore_session_service.py
tests/unittests/models/: test_anthropic_base_url.py  test_base_url_env.py  test_gemini_llm_connection.py  test_google_base_url.py  test_interactions_utils.py  test_litellm_base_url.py
tests/unittests/plugins/: test_plugin_manager.py
tests/unittests/runners/: test_runner_node.py
tests/unittests/skills/: test__utils.py
tests/unittests/telemetry/: test_functional.py  test_instrumentation.py  test_metrics.py  test_node_functional.py  test_spans.py
tests/unittests/tools/: test_agent_tool.py  test_function_tool_pydantic.py  test_request_input_tool.py  test_skill_toolset.py
tests/unittests/tools/environment/: test_edit_file_tool.py
tests/unittests/tools/mcp_tool/: test_session_context.py
tests/unittests/workflow/: test_graph.py  test_llm_agent_as_node.py
